[ussuri][goal] Drop python 2.7 support and testing
OpenStack is dropping the py2.7 support in ussuri cycle.

Masakari is ready with python 3 and ok to drop the
python 2.7 support.

Complete discussion & schedule can be found in
- http://lists.openstack.org/pipermail/openstack-discuss/2019-October/010142.html
- https://etherpad.openstack.org/p/drop-python2-support

Ussuri Communtiy-wide goal:
https://governance.openstack.org/tc/goals/selected/ussuri/drop-py27.html

Depends-On: https://review.opendev.org/#/c/693631/
Change-Id: I144571286343e6be2518e3fe72e33c86a0fd0dfe

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -46,6 +46,8 @@
       devstack_services:
         horizon: false
         swift: false
+      devstack_localrc:
+        USE_PYTHON3: true
       zuul_work_dir: src/opendev.org/openstack/masakari
     host-vars:
       controller:
@@ -83,8 +85,7 @@
       - check-requirements
       - openstack-cover-jobs
       - openstack-lower-constraints-jobs
-      - openstack-python-jobs
-      - openstack-python3-train-jobs
+      - openstack-python3-ussuri-jobs
       - publish-openstack-docs-pti
       - release-notes-jobs-python3
     check:
