--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,10 @@
 [tox]
 minversion = 2.0
-envlist = pep8,py27,py36,py37
+envlist = pep8,py36,py37
 skipsdist = True
 
 [testenv]
+basepython = python3
 usedevelop = True
 install_command = pip install -c{env:UPPER_CONSTRAINTS_FILE:https://opendev.org/openstack/requirements/raw/branch/master/upper-constraints.txt} {opts} {packages}
 setenv = VIRTUAL_ENV={envdir}
@@ -22,11 +23,6 @@ commands =
   find . -type f -name "*.pyc" -delete
 passenv = http_proxy HTTP_PROXY https_proxy HTTPS_PROXY no_proxy NO_PROXY OS_DEBUG GENERATE_HASHES
 
-[testenv:py27]
-commands =
-    {[testenv]commands}
-    stestr run {posargs}
-
 [testenv:py36]
 basepython = python3.6
 commands =
@@ -40,13 +36,11 @@ commands =
     stestr run {posargs}
 
 [testenv:functional]
-basepython = python3
 commands =
   {[testenv]commands}
   stestr --test-path=./masakari/tests/functional run --concurrency=1 --slowest {posargs}
 
 [testenv:genconfig]
-basepython = python3
 commands = oslo-config-generator --config-file=etc/masakari/masakari-config-generator.conf
 	   oslo-config-generator --config-file=etc/masakari/masakari-customized-recovery-flow-config-generator.conf
 
@@ -54,15 +48,12 @@ commands = oslo-config-generator --config-file=etc/masakari/masakari-config-gene
 commands = oslopolicy-sample-generator --config-file=etc/masakari/masakari-policy-generator.conf
 
 [testenv:pep8]
-basepython = python3
 commands = flake8 {posargs}
 
 [testenv:venv]
-basepython = python3
 commands = {posargs}
 
 [testenv:cover]
-basepython = python3
 setenv =
     VIRTUAL_ENV={envdir}
     PYTHON=coverage run --source masakari --parallel-mode
@@ -74,13 +65,11 @@ commands =
 
 [testenv:docs]
 deps = -r{toxinidir}/doc/requirements.txt
-basepython = python3
 commands =
   sphinx-build -W -b html doc/source doc/build/html
 
 [testenv:releasenotes]
 deps = -r{toxinidir}/doc/requirements.txt
-basepython = python3
 commands =
   rm -fr releasenotes/build
   sphinx-build -a -E -W -d releasenotes/build/doctrees -b html releasenotes/source releasenotes/build/html
@@ -90,7 +79,6 @@ basepython = python3
 commands = oslo_debug_helper {posargs}
 
 [testenv:api-ref]
-basepython = python3
 # This environment is called from CI scripts to test and publish
 # the API Ref to docs.openstack.org.
 commands =
@@ -116,7 +104,6 @@ local-check-factory = masakari.hacking.checks.factory
 import_exceptions = masakari.i18n
 
 [testenv:lower-constraints]
-basepython = python3
 deps =
   -c{toxinidir}/lower-constraints.txt
   -r{toxinidir}/test-requirements.txt
@@ -129,7 +116,6 @@ deps =
 # separately, outside of the requirements files, and develop mode disabled
 # explicitly to avoid unnecessarily installing the checked-out repo too (this
 # further relies on "tox.skipsdist = True" above).
-basepython = python3
 deps = bindep
 commands = bindep test
 usedevelop = False
