--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,8 @@
 [tox]
-minversion = 2.0
+minversion = 3.1.1
 envlist = pep8,py36,py37
 skipsdist = True
+ignore_basepython_conflict = True
 
 [testenv]
 basepython = python3
