--- a/tox.ini
+++ b/tox.ini
@@ -98,13 +98,44 @@ show-source = True
 # [H203] Use assertIs(Not)None to check for None.
 # [H904] Delay string interpolations at logging calls.
 enable-extensions = H106,H203,H904
-ignore = E123,E125,E128,E731,H405
+# [W504] line break after binary operator (use W503 instead)
+ignore = E123,E125,E128,E731,H405,W504
 builtins = _
 exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,build
 
 [hacking]
-local-check-factory = masakari.hacking.checks.factory
 import_exceptions = masakari.i18n
+
+[flake8:local-plugins]
+extension =
+    M301 = checks:no_db_session_in_public_api
+    M302 = checks:use_timeutils_utcnow
+    M303 = checks:capital_cfg_help
+    M305 = checks:assert_true_instance
+    M306 = checks:assert_equal_type
+    M308 = checks:no_translate_logs
+    M309 = checks:no_import_translation_in_tests
+    M310 = checks:no_setting_conf_directly_in_tests
+    M315 = checks:no_mutable_default_args
+    M316 = checks:check_explicit_underscore_import
+    M317 = checks:use_jsonutils
+    M318 = checks:assert_true_or_false_with_in
+    M319 = checks:assert_raises_regexp
+    M320 = checks:dict_constructor_with_list_copy
+    M321 = checks:assert_equal_in
+    M322 = checks:check_greenthread_spawns
+    M323 = checks:check_no_contextlib_nested
+    M324 = checks:check_config_option_in_central_place
+    M325 = checks:check_doubled_words
+    M326 = checks:check_python3_no_iteritems
+    M327 = checks:check_python3_no_iterkeys
+    M328 = checks:check_python3_no_itervalues
+    M329 = checks:no_os_popen
+    M331 = checks:no_log_warn
+    M332 = checks:yield_followed_by_space
+    M333 = checks:check_policy_registration_in_central_place
+    M334 = checks:check_policy_enforce
+paths = ./masakari/hacking
 
 [testenv:lower-constraints]
 deps =
