--- a/api-ref/source/parameters.yaml
+++ b/api-ref/source/parameters.yaml
@@ -83,7 +83,7 @@ sort_dir:
   type: string
 sort_key_host:
   description: |
-    Sorts by a hosts attribute. Default attribute is ``created``. You can specify
+    Sorts by a hosts attribute. Default attribute is ``created_at``. You can specify
     multiple pairs of sort key and sort direction query parameters. If you omit the
     sort direction in a pair, the API uses the natural sorting direction of the segment
     ``sort_key`` attribute. The sort keys are limited to:
@@ -100,7 +100,7 @@ sort_key_host:
   type: string
 sort_key_notification:
   description: |
-    Sorts by a notification attribute. Default attribute is ``created``. You can specify
+    Sorts by a notification attribute. Default attribute is ``created_at``. You can specify
     multiple pairs of sort key and sort direction query parameters. If you omit the
     sort direction in a pair, the API uses the natural sorting direction of the segment
     ``sort_key`` attribute. The sort keys are limited to:
@@ -118,7 +118,7 @@ sort_key_notification:
   type: string
 sort_key_segment:
   description: |
-    Sorts by a segment attribute. Default attribute is ``created``. You can specify
+    Sorts by a segment attribute. Default attribute is ``created_at``. You can specify
     multiple pairs of sort key and sort direction query parameters. If you omit the
     sort direction in a pair, the API uses the natural sorting direction of the segment
     ``sort_key`` attribute. The sort keys are limited to:
