[CI] Ignore files not relevant for the functional tests
Change-Id: I5496902c3e55226ab9a91e2d81c232390a90adc8

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -49,6 +49,19 @@
       - openstack/python-masakariclient
       - openstack/masakari
       - openstack/masakari-monitors
+    irrelevant-files:
+      - ^api-ref/
+      - ^doc/
+      - ^masakari/tests/unit/
+      - ^releasenotes/
+      - ^\.coveragerc$
+      - ^\.gitignore$
+      - ^\.gitreview$
+      - ^\.mailmap$
+      - ^\.zuul.yaml$
+      - ^LICENSE$
+      - ^lower-constraints.txt$
+      - \.rst$
     vars:
       test_matrix_configs: [neutron]
       devstack_services:
