Fix tox for api-ref
api-ref requires only doc requirements, not test.
Furthermore, some deps may not be installable due to lack of
binary deps in api-ref jobs, e.g. postgres [1].

[1] https://review.opendev.org/744343

Change-Id: Ie730a85ec2d05c3cdbab49da619f27982c14b9ce
Needed-By: https://review.opendev.org/744343

--- a/tox.ini
+++ b/tox.ini
@@ -51,7 +51,7 @@ commands =
   sphinx-build -W -b html doc/source doc/build/html
 
 [testenv:releasenotes]
-deps = -r{toxinidir}/doc/requirements.txt
+deps = {[testenv:docs]deps}
 commands =
   rm -fr releasenotes/build
   sphinx-build -a -E -W -d releasenotes/build/doctrees -b html releasenotes/source releasenotes/build/html
@@ -63,6 +63,7 @@ commands = oslo_debug_helper {posargs}
 [testenv:api-ref]
 # This environment is called from CI scripts to test and publish
 # the API Ref to docs.openstack.org.
+deps = {[testenv:docs]deps}
 commands =
   rm -rf api-ref/build
   sphinx-build -W -b html -d api-ref/build/doctrees api-ref/source api-ref/build/html
