Fix files to pass linting
The multiline change is about CR being removed.

Change-Id: I54268c61b3f341fa0c373dda090cef1192acbb78

--- a/roles/devstack-config/tasks/main.yml
+++ b/roles/devstack-config/tasks/main.yml
@@ -1,6 +1,7 @@
+---
 - name: Collect devstack stackenv file
   fetch:
-    flat: yes
+    flat: true
     dest: "{{ zuul.executor.log_root }}/{{ inventory_hostname }}/confs/devstack/-stackenv"
     src: "/opt/stack/devstack/.stackenv"
 
