Use some better linting
Lints docs and yaml files in addition to Python.

Change-Id: I5255362cd6d2194600e149b118da4fbe102ffdb1

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -130,8 +130,12 @@
       - release-notes-jobs-python3
     check:
       jobs:
+        - openstack-tox-linters
         - masakari-functional-devstack-multinode:
             voting: true
+    gate:
+      jobs:
+        - openstack-tox-linters
 
 - project:
     masakari-systemfault-integration-ci:
