--- a/tox.ini
+++ b/tox.ini
@@ -29,8 +29,30 @@ commands = oslo-config-generator --config-file=etc/masakari/masakari-config-gene
 [testenv:genpolicy]
 commands = oslopolicy-sample-generator --config-file=etc/masakari/masakari-policy-generator.conf
 
+[testenv:linters]
+deps =
+  -c{env:UPPER_CONSTRAINTS_FILE:https://releases.openstack.org/constraints/upper/master}
+  -r{toxinidir}/test-requirements.txt
+commands =
+  {[testenv:pep8]commands}
+  {[testenv:doc8]commands}
+  {[testenv:yamllint]commands}
+
 [testenv:pep8]
+deps = {[testenv:linters]deps}
 commands = flake8 {posargs}
+
+[testenv:doc8]
+deps = {[testenv:linters]deps}
+commands =
+  doc8 README.rst CONTRIBUTING.rst HACKING.rst doc/source
+  doc8 releasenotes/source
+  doc8 -e '.yaml' releasenotes/notes
+  doc8 -e '.rst' -e '.inc' api-ref/source
+
+[testenv:yamllint]
+deps = {[testenv:linters]deps}
+commands = yamllint -s .
 
 [testenv:venv]
 commands = {posargs}
@@ -133,3 +155,8 @@ deps =
 deps = bindep
 commands = bindep test
 usedevelop = False
+
+[doc8]
+# NOTE(yoctozepto): this is due to multiple violations - it is better to keep
+# it limited sanely rather than disable the D001 "Line too long" rule altogether
+max-line-length = 105
