--- a/tox.ini
+++ b/tox.ini
@@ -68,7 +68,8 @@ commands =
     coverage xml -o cover/coverage.xml
 
 [testenv:docs]
-deps = -r{toxinidir}/doc/requirements.txt
+deps = -c{env:TOX_CONSTRAINTS_FILE:https://releases.openstack.org/constraints/upper/master}
+       -r{toxinidir}/doc/requirements.txt
 commands =
   sphinx-build -W -b html doc/source doc/build/html
 
