[CI] Add periodic jobs
Periodic jobs are a great way to have proactive insight into
the current health of project's CI.

Change-Id: I235de800eebe86a2513b92108362f553f5f8b87e

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -139,6 +139,8 @@
       - openstack-python3-wallaby-jobs
       - publish-openstack-docs-pti
       - release-notes-jobs-python3
+      - periodic-stable-jobs
+      - periodic-jobs-with-oslo-master
     check:
       jobs:
         - openstack-tox-linters
