[goal] Deprecate the JSON formatted policy file
As per the community goal of migrating the policy file
the format from JSON to YAML[1], we need to do two things:

1. Change the default value of '[oslo_policy] policy_file''
config option from 'policy.json' to 'policy.yaml' with
upgrade checks.

2. Deprecate the JSON formatted policy file on the project side
via warning in doc and releasenotes.

Also replace policy.json to policy.yaml ref from doc and tests.

[1]https://governance.openstack.org/tc/goals/selected/wallaby/migrate-policy-format-from-json-to-yaml.html

Change-Id: Iad942530b5d540af3d3c074e9944687b93bcd7f2

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,7 +32,7 @@ oslo.config.opts =
     customized_recovery_flow_opts = masakari.conf.opts:list_recovery_workflow_opts
 
 oslo.config.opts.defaults =
-    masakari.api = masakari.common.config:set_middleware_defaults
+    masakari.api = masakari.common.config:set_lib_defaults
 
 oslo.policy.enforcer =
     masakari = masakari.policy:get_enforcer
