Fix some errors in the document
If the recovery policy uses uppercase, an error will be reported.
This patch modifies these to lowercase.

Closes-Bug: #1914482
Co-Authored-By: zhangyangyang <zhangyangyang@unionpay.com>
Change-Id: Ic4bf5a4b19df07364c09fd46f1a92a809c77b241
(cherry picked from commit 151915960acbb6ade7ad284e3bb002ed32b356f7)

--- a/api-ref/source/parameters.yaml
+++ b/api-ref/source/parameters.yaml
@@ -343,7 +343,7 @@ segment_recovery_method:
   required: true
   description: |
     Type of recovery if any host in this segment goes down. User can mention
-    either 'AUTO', 'RESERVED_HOST', 'AUTO_PRIORITY' or 'RH_PRIORITY'.
+    either 'auto', 'reserved_host', 'auto_priority' or 'rh_priority'.
 segment_service_type:
   type: string
   in: body
