[CI] Run bashate
... and fix related issues.

Change-Id: I3283545a8994c3895b9ccbe4006bec4b4cfc8c95

--- a/tox.ini
+++ b/tox.ini
@@ -33,10 +33,12 @@ commands = oslopolicy-sample-generator --config-file=etc/masakari/masakari-polic
 deps =
   -c{env:TOX_CONSTRAINTS_FILE:https://releases.openstack.org/constraints/upper/master}
   -r{toxinidir}/test-requirements.txt
+  {[testenv:bashate]deps}
 commands =
   {[testenv:pep8]commands}
   {[testenv:doc8]commands}
   {[testenv:yamllint]commands}
+  {[testenv:bashate]commands}
 
 [testenv:pep8]
 deps = {[testenv:linters]deps}
@@ -53,6 +55,14 @@ commands =
 [testenv:yamllint]
 deps = {[testenv:linters]deps}
 commands = yamllint -s .
+
+[testenv:bashate]
+skip_install = True
+deps =
+  -c{env:TOX_CONSTRAINTS_FILE:https://releases.openstack.org/constraints/upper/master}
+  bashate
+commands =
+  bashate devstack/plugin.sh -v --ignore E006 --error E005,E042,E043
 
 [testenv:venv]
 commands = {posargs}
