--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = masakari
 summary = Virtual Machine High Availability (VMHA) service for OpenStack
-description-file =
+description_file =
     README.rst
 author = OpenStack
-author-email = openstack-discuss@lists.openstack.org
-home-page = https://docs.openstack.org/masakari/latest/
+author_email = openstack-discuss@lists.openstack.org
+home_page = https://docs.openstack.org/masakari/latest/
 classifier =
     Environment :: OpenStack
     Intended Audience :: Information Technology
