Add the functional job to periodic
It broke recently and we would benefit from sampling its health
day to day.

Change-Id: Ib6a47d24355ae2a5dd70a0cc60922c616bc4a191

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -149,3 +149,6 @@
     gate:
       jobs:
         - openstack-tox-linters
+    periodic:
+      jobs:
+        - masakari-functional-devstack-multinode
