--- a/playbooks/devstack/pre.yaml
+++ b/playbooks/devstack/pre.yaml
@@ -1,8 +1,4 @@
 ---
-- hosts: all
+- hosts: controller
   roles:
-    - orchestrate-devstack
-    - role: bindep
-      bindep_profile: test
-      bindep_dir: "{{ zuul_work_dir }}"
     - ensure-tox
