[CI] Update ignored-files
Fixes the functional job to ignore all *.rst files
as it should.
Zuul currently always matches at the beginning of
the string (i.e., implicit ^).

Change-Id: I34b34810333917cf50431df00fbbcc61bc7ea382

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -58,9 +58,10 @@
       - ^\.gitignore$
       - ^\.gitreview$
       - ^\.mailmap$
+      - ^\.yamllint$
       - ^\.zuul.yaml$
       - ^LICENSE$
-      - \.rst$
+      - ^.*[^/]+\.rst$
     vars:
       test_matrix_configs: [neutron]
       devstack_services:
