[CI] Clear an overridden param
The default is fine. It's ``true`` already.

Change-Id: Ib22bbae26494ca6b7e4f81c36aa3afcc6be7e3c8

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -66,8 +66,7 @@
     check:
       jobs:
         - openstack-tox-linters
-        - masakari-functional-devstack-multinode:
-            voting: true
+        - masakari-functional-devstack-multinode
     gate:
       jobs:
         - openstack-tox-linters
