[CI] Gate on voting jobs
Per CI best practices, gate on voting jobs.

This also sets the queue to "masakari" to be able to reuse the
same queue for masakari-monitors.

Change-Id: I0099c6e1ab0eabaa24b1fdb4d58b1416d6190a80

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -93,8 +93,11 @@
         - masakari-functional-devstack-multinode
         - masakari-functional-devstack-ipv6
     gate:
+      queue: masakari
       jobs:
         - openstack-tox-linters
+        - masakari-functional-devstack-multinode
+        - masakari-functional-devstack-ipv6
     periodic:
       jobs:
         - masakari-functional-devstack-multinode
