[CI] Let Masakari jobs be used from other projects
This is required to let, e.g., masakari-monitors to gate together.

Change-Id: I4c9ee47ba34df56477ecada8bdd7595756599eed

--- a/playbooks/devstack/run-tox.yaml
+++ b/playbooks/devstack/run-tox.yaml
@@ -1,4 +1,8 @@
 ---
 - hosts: controller
   roles:
-    - tox
+    - role: tox
+      vars:
+        # NOTE(yoctozepto): We need to run this play in other projects but it is
+        # meant to run tox from this project, not the "current one".
+        zuul_work_dir: "{{ zuul.projects['opendev.org/openstack/masakari'].src_dir }}"
