update zuul jod: add TUNNEL_IP_VERSION
Change-Id: Id1cda1b3378be48dab78569c767a514312279bad

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -72,6 +72,7 @@
     vars:
       devstack_localrc:
         SERVICE_IP_VERSION: 6
+        TUNNEL_IP_VERSION: 6
         SERVICE_HOST: ""
 
 - project:
