[CI] Move queue setting to project level
Per [1] and [2].

[1] http://lists.zuul-ci.org/pipermail/zuul-discuss/2022-May/001801.html
[2] https://lists.openstack.org/pipermail/openstack-discuss/2022-September/030505.html

Change-Id: Ifea988bf9b740618c58525f170c59b5cadfe0764
(cherry picked from commit 607da5931ac468d513e0f6331f897e5f561030b2)

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -133,6 +133,7 @@
           masakari-engine: false
 
 - project:
+    queue: masakari
     templates:
       - check-requirements
       - openstack-cover-jobs
