vm moves for host notification
This feature is mainly to persist vm moves information of one host
notification into the database. It also provides a new 'VMove' api,
which could help users to insight the process or result of the host
recovery workflow, such as which vms evacuated succeed or failed, and
which ones are still evacuating.

Implements: BP vm-evacuations-for-host-recovery
Change-Id: I334af06ef526bf11dfe5030e8cba210b98f1ceea

--- a/setup.cfg
+++ b/setup.cfg
@@ -61,7 +61,7 @@ masakari.api.v1.extensions =
     segments = masakari.api.openstack.ha.segments:Segments
     hosts = masakari.api.openstack.ha.hosts:Hosts
     notifications = masakari.api.openstack.ha.notifications:Notifications
-
+    vmoves = masakari.api.openstack.ha.vmoves:VMoves
 masakari.driver =
     taskflow_driver = masakari.engine.drivers.taskflow:TaskFlowDriver
 
