--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,7 +4,7 @@ default_language_version:
   python: python3
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.3.0
+    rev: v4.4.0
     hooks:
       - id: trailing-whitespace
       - id: mixed-line-ending
@@ -20,7 +20,7 @@ repos:
       - id: flake8
         name: flake8
         additional_dependencies:
-          - hacking>=3.0.1,<3.1.0
+          - hacking~=6.0.1
         language: python
         entry: flake8
         files: '^.*\.py$'
