db: Add initial alembic configuration
No migrations yet: this is simply the output of 'alembic init' with some
minor tweaks.

Change-Id: Ib9423c2f751d7ec0a0dec89bdc39f9b6ab043655
Signed-off-by: Stephen Finucane <stephenfin@redhat.com>

--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,6 @@ etc/masakari/policy.yaml.sample
 doc/source/_static/masakari.conf.sample
 doc/source/_static/masakari-custom-recovery-methods.conf.sample
 doc/source/_static/masakari.policy.yaml.sample
+
+# Files created by alembic
+/masakari.db
