Fix compatability with new oslo.messaging and ci broken
1.A recent change to oslo.messaging to redact contexts before sending them
to a notification bus broke masakari due to the invalid default for
read_deleted. This ensures that a "None" value for read_deleted ends up
being interpreted as a 'none'.
Related-bug: #2030976

2.Add sqlalchemy-migrate dependence in test-requirements.txt

3.Fix unit tests broken by oslo.utils

4.Make functional jobs not voting

Change-Id: Ic9b895601f301c1e9ba135766493d4234fa9b50b
(cherry picked from commit 636df8898393acccfaa505ec71b67081ab1c07b5)

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -53,6 +53,7 @@
 
 - job:
     name: masakari-functional-devstack-multinode
+    voting: false
     parent: masakari-functional-devstack
     description: |
       Masakari functional tests job based on devstack (two-node).
@@ -60,6 +61,7 @@
 
 - job:
     name: masakari-functional-devstack-ipv6
+    voting: false
     # NOTE(yoctozepto): The devstack job does not support multinode IPv6 yet.
     parent: masakari-functional-devstack
     description: |
