--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -96,8 +96,7 @@
 - project:
     queue: masakari
     templates:
-      # NOTE(suzhengwei): Remove "check-requirements" temporarily
-      # - check-requirements
+      - check-requirements
       - openstack-cover-jobs
       - openstack-python3-jobs
       - publish-openstack-docs-pti
